[package]
authors = ["Kornel <kornel@geekhood.net>"]
categories = ["multimedia::video", "command-line-utilities"]
description = "pngquant-based GIF maker for nice-looking animGIFs"
documentation = "https://docs.rs/gifski"
homepage = "https://gif.ski"
include = ["/README.md", "/Cargo.toml", "/src/*.rs", "/src/bin/*.rs"]
keywords = ["gif", "encoder", "converter", "maker", "gifquant"]
license = "AGPL-3.0+"
name = "gifski"
readme = "README.md"
repository = "https://github.com/ImageOptim/gifski"
version = "0.6.1"


[package.metadata.deb]
features = ["openmp"]

[[bin]]
doctest = false
name = "gifski"

[dependencies]
clap = "2.26.2"
error-chain = "0.11.0"
gif = "0.9.2"
gif-dispose = "2.0.1"
glob = "0.2.11"
imagequant = "2.11.6"
imgref = "1.3.0"
lodepng = "2.0.5"
pbr = "1.0.0"
rayon = "0.9.0"
resize = "0.3.0"
rgb = "0.8.2"
wild = "0.1.0"

[dependencies.ffmpeg]
optional = true
git = "https://github.com/pornel/rust-ffmpeg.git"
features = ["codec", "format", "filter", "software-resampling", "software-scaling", "resampling" ]

[features]
default-features = []
openmp = ["imagequant/openmp"]
video = ["ffmpeg"]

[lib]
path = "src/lib.rs"

[profile.dev]
opt-level = 1

[profile.release]
panic = "abort"
lto = true
