[package]
authors = ["Kornel <kornel@geekhood.net>"]
categories = ["multimedia::video", "command-line-utilities"]
description = "pngquant-based GIF maker for nice-looking animGIFs"
documentation = "https://docs.rs/gifski"
homepage = "https://gif.ski"
include = ["/README.md", "/Cargo.toml", "/src/**/*.rs", "/src/bin/*.rs"]
keywords = ["gif", "encoder", "converter", "maker", "gifquant"]
license = "AGPL-3.0+"
name = "gifski"
readme = "README.md"
repository = "https://github.com/ImageOptim/gifski"
version = "1.1.1"
autobins = false
edition = "2018"

[[bin]]
doctest = false
name = "gifski"

[dependencies]
gifsicle = { version = "1.92.0", optional = true }
clap = "2.33.1"
gif = "0.10.3"
gif-dispose = "2.4.0"
imagequant = "2.12.5"
imgref = "1.6.1"
lodepng = "3.0.0"
pbr = "1.0.3"
resize = "0.4.0"
rgb = "0.8.20"
wild = "2.0.4"
natord = "1.0.9"
quick-error = "1.2.3"
dunce = "1.0.1"

[dependencies.ffmpeg]
git = "https://github.com/kornelski/rust-ffmpeg"
optional = true
default-features = false
features = ["ffmpeg4", "codec", "format", "filter", "software-resampling", "software-scaling"]

[features]
default = []
openmp = ["imagequant/openmp"]
openmp-static = ["openmp", "imagequant/openmp-static"]
video = ["ffmpeg"]
video-static = ["video", "ffmpeg/build"]

[lib]
path = "src/lib.rs"
crate-type = ["lib", "staticlib", "cdylib"]

[profile.dev.package.imagequant]
opt-level = 3

[profile.release]
panic = "abort"
lto = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
